Explore different K-Means seeds

--- a/ellsberg_emotion_decision_tree.ipynb
+++ b/ellsberg_emotion_decision_tree.ipynb
@@ -77,7 +77,7 @@
    "outputs": [],
    "source": [
     "K = 2 # Optimal value according to 'daa_kmeans.ipynb' was K=4, but silhouette difference didn't justify working with 2 extra clusters\n",
-    "R = 0 # Set to 'None' to randomise KMeans search\n",
+    "R = 24 # Set to 'None' to randomise KMeans search\n",
     "\n",
     "def build_kmeans(points, k, r):\n",
     "    clusterer = KMeans(n_clusters=k, n_init='auto', random_state=r)\n",
@@ -167,6 +167,10 @@
     "        return self.__df\n",
     "\n",
     "    @property\n",
+    "    def df_counts(self):\n",
+    "        return self.__df_counts\n",
+    "\n",
+    "    @property\n",
     "    def df_p(self):\n",
     "        return self.__df_p\n",
     "\n",
@@ -238,7 +242,7 @@
     "\n",
     "        self.__param = None\n",
     "        self.__cutoff = None\n",
-    "        self.__gain = None\n",
+    "        self.__gain = 0\n",
     "        self.__left = None\n",
     "        self.__right = None\n",
     "\n",
@@ -271,6 +275,17 @@
     "    @property\n",
     "    def right(self):\n",
     "        return self.__right\n",
+    "\n",
+    "    @property\n",
+    "    def metric(self):\n",
+    "        return self.__ct.metric\n",
+    "\n",
+    "    @property\n",
+    "    def subtree_metric(self):\n",
+    "        if self.is_leaf:\n",
+    "            return self.metric\n",
+    "        else:\n",
+    "            return self.left.metric + self.right.metric\n",
     "\n",
     "    def __find_cutoff(self, param, cutoff):\n",
     "        left_df = self.__ct.df[self.__ct.df[param] <= cutoff]\n",
@@ -375,7 +390,17 @@
     "logger.setLevel('WARNING')\n",
     "\n",
     "np.random.default_rng(seed=1337)\n",
-    "dt = DecisionTree(df, min_gain=0.01, min_samples_leaf=20)"
+    "dt = DecisionTree(df, min_gain=0.025, min_samples_leaf=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with open('R.txt', 'a') as fout:\n",
+    "#    fout.write(f'{R}    {dt.root.subtree_metric - dt.root.metric}\\n')"
    ]
   },
   {
@@ -404,11 +429,12 @@
     "    def __node_label(self, node):\n",
     "        len = node.ct.len\n",
     "        su = node.ct.metric\n",
-    "        values = node.ct.df['DAA'].value_counts().to_list()\n",
     "        return f'id = {node.id}\\\\n' + \\\n",
     "               f'samples = {len}\\\\n' + \\\n",
-    "               f'metric = {su:.5f}\\\\n' + \\\n",
-    "               f'values = {values}'\n",
+    "               f'su = {su:.5f}\\\\n' + \\\n",
+    "               f'cluster   0   1\\n' + \\\n",
+    "               f'non-daa {node.ct.df_counts.loc[0].tolist()}\\n' + \\\n",
+    "               f'daa       {node.ct.df_counts.loc[1].tolist()}'\n",
     "\n",
     "    def __node_content(self, node):\n",
     "        if node.is_leaf:\n",
@@ -451,12 +477,12 @@
     "\n",
     "report_basename = 'ellsberg_emotion_decision_tree'\n",
     "\n",
-    "report_dot = f'{report_basename}.dot'\n",
+    "report_dot = f'{report_basename}.{R}.dot'\n",
     "with open(report_dot, 'w') as fout:\n",
     "    dot_output = DotPrinter(dt)\n",
     "    fout.write(dot_output.print())\n",
     "\n",
-    "report_png = f'{report_basename}.png'\n",
+    "report_png = f'{report_basename}.{R}.png'\n",
     "subprocess.check_call(['dot', report_dot, '-Tpng', f'-o{report_png}'])"
    ]
   }
