Reuse same components in all files

--- a/ellsberg_emotion_decision_tree.ipynb
+++ b/ellsberg_emotion_decision_tree.ipynb
@@ -14,10 +14,14 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.cluster import KMeans\n",
-    "from scipy.stats import entropy\n",
     "\n",
-    "df = pd.read_csv('data/data_ellsberg.csv')"
+    "from data_common import PERSONALITY_FEATURES, EMOTIONS_FEATURES, EMOTIONS_LABELS, DAA, CLUSTER\n",
+    "\n",
+    "from kmeans import KMeans\n",
+    "from kmeans_printer import print_per_game_kmeans\n",
+    "\n",
+    "df = pd.read_csv('data/data_ellsberg.csv')\n",
+    "df = df[PERSONALITY_FEATURES + EMOTIONS_FEATURES + [DAA]]"
    ]
   },
   {
@@ -26,20 +30,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ids = ['ID', 'participant_id']\n",
+    "random_state = 18\n",
+    "K = 2\n",
     "\n",
-    "dt_features = ['Openess','Conciensiousness','Extroversion','Agreability','Stability','Locus']\n",
-    "\n",
-    "x_labels = []\n",
-    "emotions = ['Hopeful','Curiosity','Enlightenment','Thrilled','Anticipatory','Satisfied' ]\n",
-    "kmeans_features = []\n",
-    "for x in ['1A', '1B', '2A', '2B']:\n",
-    "    kmeans_features += [f'{emotion}{x}' for emotion in emotions]\n",
-    "    x_labels.append([f'{emotion[:4]}{x}' for emotion in emotions])\n",
-    "\n",
-    "label = ['DAA']\n",
-    "\n",
-    "df = df[ids + kmeans_features + dt_features + label]"
+    "km = KMeans(df[EMOTIONS_FEATURES], K, random_state=random_state)\n",
+    "print_per_game_kmeans(km, EMOTIONS_LABELS, plot_graph=True)"
    ]
   },
   {
@@ -48,26 +43,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "def show_results(labels, centeroids, plot_graph=False):\n",
-    "    k = len(centeroids) # number of clusters\n",
-    "\n",
-    "    print('labels:', labels, '\\n') \n",
-    "    print('centroids:')\n",
-    "    for i in range(k):\n",
-    "        print(i,':',centeroids[i,:],'\\n')\n",
-    "\n",
-    "    if plot_graph:\n",
-    "        games_count = len(x_labels)\n",
-    "        labels_count = len(emotions)\n",
-    "        _, axs = plt.subplots(games_count, figsize=(10, 10))\n",
-    "        for ig in range(games_count):\n",
-    "            graph_labels = x_labels[ig]\n",
-    "            graph_centers = centeroids[:,ig*labels_count:(ig+1)*labels_count]\n",
-    "            for ik in range(k):\n",
-    "                axs[ig].plot(graph_labels, graph_centers[ik,:], label=f'Cluster #{ik}')\n",
-    "            axs[ig].legend(loc='upper right')"
+    "df[CLUSTER] = km.labels\n",
+    "df = df.drop(EMOTIONS_FEATURES, axis=1)"
    ]
   },
   {
@@ -76,165 +53,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "K = 2 # Optimal value according to 'daa_kmeans.ipynb' was K=4, but silhouette difference didn't justify working with 2 extra clusters\n",
-    "R = 24 # Set to 'None' to randomise KMeans search\n",
+    "from symmetric_uncertainty import SUT\n",
     "\n",
-    "def build_kmeans(points, k, r):\n",
-    "    clusterer = KMeans(n_clusters=k, n_init='auto', random_state=r)\n",
-    "    preds = clusterer.fit_predict(points)\n",
-    "    return clusterer, preds\n",
-    "\n",
-    "clusterer, _ = build_kmeans(df[kmeans_features], K, R)\n",
-    "labels = clusterer.labels_\n",
-    "centeroids = clusterer.cluster_centers_\n",
-    "\n",
-    "show_results(labels, centeroids, plot_graph=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['Cluster'] = labels\n",
-    "df = df.drop(kmeans_features, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import math\n",
-    "\n",
-    "class ClusterTable:\n",
-    "\n",
-    "    EPS = 1e-5\n",
-    "\n",
-    "    def __init__(self, df):\n",
-    "        self.__df = df\n",
-    "\n",
-    "        self.__df_counts = self.__build_matrix_of_counts(self.__df)\n",
-    "        self.__df_p = self.__build_matrix_of_p(self.__df_counts)\n",
-    "\n",
-    "        self.__daa_counts = self.__df_counts.sum(axis=1)\n",
-    "        self.__daa_p = self.__counts_to_p(self.__daa_counts)\n",
-    "\n",
-    "        self.__cluster_counts = self.__df_counts.sum(axis=0)\n",
-    "        self.__cluster_p = self.__counts_to_p(self.__cluster_counts)\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def __build_matrix_of_counts(df):\n",
-    "        return pd.crosstab(index=df['DAA'], columns=df['Cluster'])\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def __build_matrix_of_p(df_count):\n",
-    "        columns = range(K)\n",
-    "        index = [0,1] # DAA values\n",
-    "        odds = df_count.div(df_count.sum(axis=1).sum(axis=0), axis=0)\n",
-    "        return odds.reindex(index=index, columns=columns, fill_value=0)\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def __counts_to_p(occurences):\n",
-    "        return occurences.div(occurences.sum())\n",
-    "\n",
-    "    def __str__(self):\n",
-    "        return f'''\n",
-    "Samples:               {self.len}\n",
-    "DAA (X) total:         {self.__daa_counts.tolist()}\n",
-    "DAA (X) p:             {self.__daa_p.tolist()}\n",
-    "DAA (X) entropy:       {self.__daa_entropy}\n",
-    "Cluster (Y) total:     {self.__cluster_counts.tolist()}\n",
-    "Cluster (Y) p:         {self.__cluster_p.tolist()}\n",
-    "Cluster (Y) entropy:   {self.__cluster_entropy}\n",
-    "Joint entropy:         {self.__joint_entropy}\n",
-    "Mutual info:           {self.__mutual_information}\n",
-    "Symmetric uncertainty: {self.symmetric_uncertainty}\n",
-    "KL-divergence:         {self.kl_divergence}\n",
-    "Total var distance:    {self.total_variation_distance}\n",
-    "{self.__df_counts.to_string()}\n",
-    "{self.__df_p.to_string()}\n",
-    "'''\n",
-    "\n",
-    "    @property\n",
-    "    def len(self):\n",
-    "        return len(self.__df)\n",
-    "\n",
-    "    @property\n",
-    "    def df(self):\n",
-    "        return self.__df\n",
-    "\n",
-    "    @property\n",
-    "    def df_counts(self):\n",
-    "        return self.__df_counts\n",
-    "\n",
-    "    @property\n",
-    "    def df_p(self):\n",
-    "        return self.__df_p\n",
-    "\n",
-    "    @property\n",
-    "    def __cluster_p_for_non_daa(self):\n",
-    "        return self.__df_p.loc[0]\n",
-    "\n",
-    "    @property\n",
-    "    def __cluster_p_for_daa(self):\n",
-    "        return self.__df_p.loc[1]\n",
-    "\n",
-    "    @property\n",
-    "    def __daa_entropy(self):\n",
-    "        return entropy(self.__daa_p + ClusterTable.EPS, base=2)\n",
-    "\n",
-    "    @property\n",
-    "    def __cluster_entropy(self):\n",
-    "        return entropy(self.__cluster_p + ClusterTable.EPS, base=2)\n",
-    "\n",
-    "    @property\n",
-    "    def __joint_entropy(self):\n",
-    "        joint_p = np.concatenate([self.__cluster_p_for_daa, self.__cluster_p_for_non_daa])\n",
-    "        return entropy(joint_p + ClusterTable.EPS, base=2)\n",
-    "\n",
-    "    @property\n",
-    "    def __mutual_information(self):\n",
-    "        return self.__daa_entropy + self.__cluster_entropy - self.__joint_entropy\n",
-    "\n",
-    "    @property\n",
-    "    def symmetric_uncertainty(self):\n",
-    "        return (2 * self.__mutual_information) / (self.__daa_entropy + self.__cluster_entropy)\n",
-    "\n",
-    "    @property\n",
-    "    def total_variation_distance(self):\n",
-    "        return 0.5 * sum(abs(self.__cluster_p_for_daa - self.__cluster_p_for_non_daa))\n",
-    "\n",
-    "    @property\n",
-    "    def kl_divergence(self):\n",
-    "        pk = self.__cluster_p_for_daa + ClusterTable.EPS\n",
-    "        qk = self.__cluster_p_for_non_daa + ClusterTable.EPS\n",
-    "        pq = entropy(pk, qk=qk, base=2)\n",
-    "        qp = entropy(qk, qk=pk, base=2)\n",
-    "        return sum([pq, qp]) / 2\n",
-    "\n",
-    "    @property\n",
-    "    def metric(self):\n",
-    "        return self.symmetric_uncertainty"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "class DecisionNode:\n",
     "    ID = 0\n",
     "\n",
-    "    def __init__(self, df, min_gain, min_samples_leaf):\n",
+    "    def __init__(self, df, min_gain, min_samples_leaf, index=None, columns=None):\n",
     "        self.__log = logging.getLogger('dt')\n",
     "\n",
     "        self.__id = DecisionNode.ID\n",
     "        DecisionNode.ID += 1\n",
-    "        self.__ct = ClusterTable(df)\n",
+    "        self.__ct = SUT(df, index, columns)\n",
     "\n",
     "        self.__min_samples_leaf = min_samples_leaf\n",
     "        self.__min_samples_split = 3 * self.__min_samples_leaf\n",
@@ -302,13 +131,13 @@
     "            self.__log.info(f'\\t\\t\\tNot enough samples in leaf: {left_len}, {right_len}')\n",
     "            return 0\n",
     "\n",
-    "        left_ct = ClusterTable(left_df)\n",
+    "        left_ct = SUT(left_df, self.__ct.index, self.__ct.columns)\n",
     "        self.__log.debug('\\t\\t\\t' + '\\n\\t\\t\\t'.join(left_ct.df_p.to_string().split('\\n')))\n",
     "\n",
     "        left_metric = left_ct.metric\n",
     "        self.__log.info(f'\\t\\t\\tL: {left_metric}')\n",
     "\n",
-    "        right_ct = ClusterTable(right_df)\n",
+    "        right_ct = SUT(right_df, self.__ct.index, self.__ct.columns)\n",
     "        self.__log.debug('\\t\\t\\t' + '\\n\\t\\t\\t'.join(right_ct.df_p.to_string().split('\\n')))\n",
     "\n",
     "        right_metric = right_ct.metric\n",
@@ -335,7 +164,7 @@
     "    def __find_best_cutoff(self, current):\n",
     "        best_param = best_cutoff = best_gain = None\n",
     "\n",
-    "        params = dt_features.copy()\n",
+    "        params = PERSONALITY_FEATURES.copy()\n",
     "        np.random.shuffle(params)\n",
     "        for param in params:\n",
     "            self.__log.info(f'\\t{param}')\n",
@@ -366,15 +195,19 @@
     "        left_df, right_df = self.__find_cutoff(self.__param, self.__cutoff)\n",
     "\n",
     "        self.__log.warning(f'\\tBest gain: {self.__gain}\\n')\n",
-    "        self.__log.warning('\\tLeft:\\t' + '\\n\\t'.join(str(ClusterTable(left_df)).split('\\n')))\n",
-    "        self.__log.warning('\\tRight:\\t' + '\\n\\t'.join(str(ClusterTable(right_df)).split('\\n')))\n",
+    "        self.__log.warning('\\tLeft:\\t' + '\\n\\t'.join(str(SUT(left_df, self.__ct.index, self.__ct.columns)).split('\\n')))\n",
+    "        self.__log.warning('\\tRight:\\t' + '\\n\\t'.join(str(SUT(right_df, self.__ct.index, self.__ct.columns)).split('\\n')))\n",
     "\n",
     "        self.__left = DecisionNode(left_df,\n",
     "                                   min_gain=self.__min_gain,\n",
-    "                                   min_samples_leaf=self.__min_samples_leaf)\n",
+    "                                   min_samples_leaf=self.__min_samples_leaf,\n",
+    "                                   index=self.__ct.index,\n",
+    "                                   columns=self.__ct.columns)\n",
     "        self.__right = DecisionNode(right_df,\n",
     "                                    min_gain=self.__min_gain,\n",
-    "                                    min_samples_leaf=self.__min_samples_leaf)\n",
+    "                                    min_samples_leaf=self.__min_samples_leaf,\n",
+    "                                    index=self.__ct.index,\n",
+    "                                    columns=self.__ct.columns)\n",
     "\n",
     "class DecisionTree:\n",
     "    def __init__(self, df, min_gain, min_samples_leaf):\n",
@@ -391,16 +224,6 @@
     "\n",
     "np.random.default_rng(seed=1337)\n",
     "dt = DecisionTree(df, min_gain=0.025, min_samples_leaf=20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# with open('R.txt', 'a') as fout:\n",
-    "#    fout.write(f'{R}    {dt.root.subtree_metric - dt.root.metric}\\n')"
    ]
   },
   {
@@ -477,12 +300,12 @@
     "\n",
     "report_basename = 'ellsberg_emotion_decision_tree'\n",
     "\n",
-    "report_dot = f'{report_basename}.{R}.dot'\n",
+    "report_dot = f'{report_basename}.{random_state}.dot'\n",
     "with open(report_dot, 'w') as fout:\n",
     "    dot_output = DotPrinter(dt)\n",
     "    fout.write(dot_output.print())\n",
     "\n",
-    "report_png = f'{report_basename}.{R}.png'\n",
+    "report_png = f'{report_basename}.{random_state}.png'\n",
     "subprocess.check_call(['dot', report_dot, '-Tpng', f'-o{report_png}'])"
    ]
   }
