--- a/ellsberg_kmeans_emotion_only.ipynb
+++ b/ellsberg_kmeans_emotion_only.ipynb
@@ -7,11 +7,18 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.metrics import silhouette_score\n",
-    "from sklearn.cluster import KMeans\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "df = pd.read_csv('data/data_ellsberg.csv')"
+    "from kmeans import KMeans\n",
+    "from kmeans_printer import print_per_game_kmeans\n",
+    "from pca import print_pca\n",
+    "\n",
+    "from symmetric_uncertainty import SUT\n",
+    "\n",
+    "from data_common import EMOTIONS_FEATURES, EMOTIONS_LABELS, DAA, CLUSTER\n",
+    "\n",
+    "df = pd.read_csv('data/data_ellsberg.csv')\n",
+    "df = df[EMOTIONS_FEATURES + [DAA]]"
    ]
   },
   {
@@ -20,33 +27,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "emotions = [\n",
-    "    'Hopeful', \n",
-    "    'Curiosity', \n",
-    "    'Enlightenment',\n",
-    "    'Thrilled', \n",
-    "    'Anticipatory',\n",
-    "    'Satisfied'\n",
-    "]\n",
+    "# K=6 -> seed=69 -> SU = 0.098\n",
+    "# K=5 -> seed=14 -> SU = 0.056\n",
+    "# K=4 -> seed=20 -> SU = 0.096\n",
+    "# K=3 -> seed=18 -> SU = 0.081\n",
     "\n",
-    "x_labels = []\n",
-    "emotions_cols = []\n",
-    "for x in ['1A', '1B', '2A', '2B']:\n",
-    "    emotions_cols += [f'{emotion}{x}' for emotion in emotions]\n",
-    "    x_labels.append([f'{emotion[:4]}{x}' for emotion in emotions])\n",
-    "\n",
-    "df = df[emotions_cols]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "K = 2\n",
+    "random_state = 18\n",
     "K_range = range(2, 11)\n",
-    "distance_metric='euclidean'"
+    "K = 3"
    ]
   },
   {
@@ -55,79 +43,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calc_silhouette(df, preds):\n",
-    "    return silhouette_score(df, preds, metric=distance_metric)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def build_kmeans(points, k):\n",
-    "    clusterer = KMeans(n_clusters=k, n_init='auto')\n",
-    "    preds = clusterer.fit_predict(points)\n",
-    "    return clusterer, preds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "def show_results(clusterer, k, plot_graph=False):\n",
-    "    print('labels:', clusterer.labels_, '\\n') \n",
-    "    centers = clusterer.cluster_centers_\n",
-    "\n",
-    "    print('centroids:')\n",
-    "    for i in range(k):\n",
-    "        print(i,':',centers[i,:],'\\n')\n",
-    "\n",
-    "    if plot_graph:\n",
-    "        games_count = len(x_labels)\n",
-    "        labels_count = len(emotions)\n",
-    "        _, axs = plt.subplots(games_count, figsize=(10, 10))\n",
-    "        for ig in range(games_count):\n",
-    "            graph_labels = x_labels[ig]\n",
-    "            graph_centers = centers[:,ig*labels_count:(ig+1)*labels_count]\n",
-    "            for ik in range(k):\n",
-    "                axs[ig].plot(graph_labels, graph_centers[ik,:], label=f'Cluster #{ik}')\n",
-    "            axs[ig].legend(loc='upper right')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clusterer, preds = build_kmeans(df, K)\n",
-    "show_results(clusterer, K, plot_graph=True)\n",
-    "calc_silhouette(df, preds)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sils = []\n",
-    "for k in K_range:\n",
-    "    clusterer, preds = build_kmeans(df, k)\n",
-    "    sils.append(calc_silhouette(df, preds))\n",
-    "\n",
+    "sils = [KMeans(df[EMOTIONS_FEATURES], k, random_state=random_state).silhouette for k in K_range]\n",
     "plt.plot(K_range, sils, 'bx-')\n",
     "plt.xlabel('k')\n",
-    "plt.ylabel('silheuettes')\n",
-    "#plt.title('Sillheuette score per number of clusters (k)')\n",
+    "plt.ylabel('silhouette')\n",
     "plt.show()\n",
     "\n",
-    "# Typically, mean silhouette over 0.6 is considered a \"good\" clustering solution\n"
+    "# Typically, mean silhouette over 0.6 is considered a \"good\" clustering solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K=3\n",
+    "km = KMeans(df[EMOTIONS_FEATURES], K, random_state=random_state)\n",
+    "\n",
+    "#print('Silhouette:', km.silhouette, '\\n')\n",
+    "\n",
+    "#print(100 * (km.centroids[0] - km.centroids[1]) / km.centroids[1])\n",
+    "#print(100 * (km.centroids[0] - km.centroids[2]) / km.centroids[2])\n",
+    "\n",
+    "print_per_game_kmeans(km, EMOTIONS_LABELS, plot_graph=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print_pca(df, km)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[CLUSTER] = km.labels\n",
+    "print(SUT(df))"
    ]
   }
  ],
