--- a/ellsberg_kmeans_personality_and_emotion.ipynb
+++ b/ellsberg_kmeans_personality_and_emotion.ipynb
@@ -7,37 +7,18 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.metrics import silhouette_score\n",
-    "from sklearn.cluster import KMeans\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "df = pd.read_csv('data/data_ellsberg.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "emotions = [\n",
-    "    'Hopeful', \n",
-    "    'Curiosity', \n",
-    "    'Enlightenment',\n",
-    "    'Thrilled', \n",
-    "    'Anticipatory',\n",
-    "    'Satisfied'\n",
-    "]\n",
+    "from kmeans import KMeans\n",
+    "from kmeans_printer import print_per_game_kmeans\n",
+    "from pca import print_pca\n",
     "\n",
-    "feature_cols = ['Openess','Conciensiousness','Extroversion','Agreability','Stability','Locus']\n",
+    "from symmetric_uncertainty import SUT\n",
     "\n",
-    "x_labels = []\n",
-    "emotions_cols = []\n",
-    "for x in ['1A', '1B', '2A', '2B']:\n",
-    "    emotions_cols += [f'{emotion}{x}' for emotion in emotions]\n",
-    "    x_labels.append([f'{emotion[:4]}{x}' for emotion in emotions])\n",
+    "from data_common import PERSONALITY_FEATURES, EMOTIONS_FEATURES, EMOTIONS_LABELS, DAA, CLUSTER\n",
     "\n",
-    "df = df[feature_cols + emotions_cols]"
+    "df = pd.read_csv('data/data_ellsberg.csv')\n",
+    "df = df[PERSONALITY_FEATURES + EMOTIONS_FEATURES + [DAA]]"
    ]
   },
   {
@@ -54,49 +35,13 @@
    "outputs": [],
    "source": [
     "K_range = range(2, 11)\n",
-    "distance_metric='euclidean'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calc_silhouette(df, preds):\n",
-    "    return silhouette_score(df, preds, metric=distance_metric)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def build_kmeans(points, k):\n",
-    "    clusterer = KMeans(n_clusters=k, n_init='auto')\n",
-    "    preds = clusterer.fit_predict(points)\n",
-    "    return clusterer, preds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sils = []\n",
-    "for k in K_range:\n",
-    "    clusterer, preds = build_kmeans(df[feature_cols], k)\n",
-    "    sils.append(calc_silhouette(df[feature_cols], preds))\n",
-    "\n",
+    "sils = [KMeans(df[PERSONALITY_FEATURES], k).silhouette for k in K_range]\n",
     "plt.plot(K_range, sils, 'bx-')\n",
     "plt.xlabel('k')\n",
-    "plt.ylabel('silheuettes')\n",
-    "#plt.title('Sillheuette score per number of clusters (k)')\n",
+    "plt.ylabel('silhouettes')\n",
     "plt.show()\n",
     "\n",
-    "# Typically, mean silhouette over 0.6 is considered a \"good\" clustering solution\n"
+    "# Typically, mean silhouette over 0.6 is considered a \"good\" clustering solution"
    ]
   },
   {
@@ -128,9 +73,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_clusterer, preds = build_kmeans(df[feature_cols], K)\n",
-    "df['fcluster'] = feature_clusterer.labels_\n",
-    "df = df.drop(feature_cols, axis=1)"
+    "PERSONALITY_CLUSTER = 'PersonalityCluster'\n",
+    "\n",
+    "km = KMeans(df[PERSONALITY_FEATURES], K)\n",
+    "df[PERSONALITY_CLUSTER] = km.labels\n",
+    "print(df[PERSONALITY_CLUSTER].value_counts())"
    ]
   },
   {
@@ -139,8 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(df.head())\n",
-    "print(df['fcluster'].value_counts())"
+    "print_pca(df, km)"
    ]
   },
   {
@@ -149,27 +95,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def show_results(clusterer, k, print_labels=False, print_centers=False, plot_graph=False):\n",
-    "    if print_labels:\n",
-    "        print('labels:', clusterer.labels_, '\\n') \n",
-    "\n",
-    "    centers = clusterer.cluster_centers_\n",
-    "\n",
-    "    if print_centers:\n",
-    "        print('centroids:')\n",
-    "        for i in range(k):\n",
-    "            print(i,':',centers[i,:],'\\n')\n",
-    "\n",
-    "    if plot_graph:\n",
-    "        games_count = len(x_labels)\n",
-    "        labels_count = len(emotions)\n",
-    "        _, axs = plt.subplots(games_count, figsize=(10, 10))\n",
-    "        for ig in range(games_count):\n",
-    "            graph_labels = x_labels[ig]\n",
-    "            graph_centers = centers[:,ig*labels_count:(ig+1)*labels_count]\n",
-    "            for ik in range(k):\n",
-    "                axs[ig].plot(graph_labels, graph_centers[ik,:], label=f'Emotion cluster #{ik}')\n",
-    "                axs[ig].legend(loc='upper right')"
+    "df[CLUSTER] = df[PERSONALITY_CLUSTER]\n",
+    "print(SUT(df))"
    ]
   },
   {
@@ -178,10 +105,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def show_k_results(df, k, plot_graph=True):\n",
-    "    k_df = df[df['fcluster'] == k].drop('fcluster', axis=1)\n",
-    "    emotion_clusterer, _ = build_kmeans(k_df, K)\n",
-    "    show_results(emotion_clusterer, K, plot_graph=plot_graph)"
+    "df = df.drop(df[PERSONALITY_FEATURES], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use same global properties for KMeans search\n",
+    "random_state = 18\n",
+    "K_range = range(2, 11)\n",
+    "K = 2"
    ]
   },
   {
@@ -197,7 +133,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_k_results(df, 0)"
+    "df0 = df[df[PERSONALITY_CLUSTER] == 0].drop(PERSONALITY_CLUSTER, axis=1)\n",
+    "sils = [KMeans(df0[EMOTIONS_FEATURES], k, random_state=random_state).silhouette for k in K_range]\n",
+    "plt.plot(K_range, sils, 'bx-')\n",
+    "plt.xlabel('k')\n",
+    "plt.ylabel('silhouette')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "km = KMeans(df0, K, random_state=random_state)\n",
+    "print_per_game_kmeans(km, EMOTIONS_LABELS, plot_graph=True)"
    ]
   },
   {
@@ -213,7 +164,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_k_results(df, 1)"
+    "df1 = df[df[PERSONALITY_CLUSTER] == 1].drop(PERSONALITY_CLUSTER, axis=1)\n",
+    "sils = [KMeans(df1[EMOTIONS_FEATURES], k).silhouette for k in K_range]\n",
+    "plt.plot(K_range, sils, 'bx-')\n",
+    "plt.xlabel('k')\n",
+    "plt.ylabel('silhouette')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "km = KMeans(df1, K, random_state=random_state)\n",
+    "print_per_game_kmeans(km, EMOTIONS_LABELS, plot_graph=True)"
    ]
   }
  ],
