Fix Locus calculation

--- a/ellsberg_prepare_data.ipynb
+++ b/ellsberg_prepare_data.ipynb
@@ -513,9 +513,9 @@
     "    df[locus_k] = np.where(df[locus_k].str.startswith(v, na=False), 1, 2)\n",
     "\n",
     "# Calculate a single locus score column\n",
-    "score_keys = ['LocusScore' + k for dk in locus_score_mapping]\n",
+    "score_keys = ['LocusScore' + dk for dk in locus_score_mapping]\n",
     "df['Locus'] = df[score_keys].sum(axis=1)\n",
-    "df['Locus'].unique()"
+    "df['Locus'].value_counts()"
    ]
   },
   {
