Fix data type casting descriptions

--- a/ellsberg_prepare_data.ipynb
+++ b/ellsberg_prepare_data.ipynb
@@ -21,10 +21,10 @@
     "3. Rename generic column names into useable ones\n",
     "4. Remove participant with multiple records (there should be exactly 1 participant to remove)\n",
     "5. Join against demographic data\n",
-    "6. Standardise game choice values\n",
-    "7. Standardise game certainty values\n",
-    "8. Standardise values for game emotions\n",
-    "9. Standardise TIPI answers\n",
+    "6. Convert game choice data types\n",
+    "7. Convert certainty values data types \n",
+    "8. Convert game emotions values data types\n",
+    "9. Convert TIPI answer data types\n",
     "10. Calculate TIPI values\n",
     "11. Calculate locus values\n",
     "12. Add a column saying if the participant displays ambiguity aversion (DAA)\n",
@@ -236,7 +236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 6: Standardise game choice values\n",
+    "#### Step 6: Convert game choice data types\n",
     "\n",
     "If the participant chose lottery A, set the value as (numeric) 1, otherwise, set the value as (numeric) 2"
    ]
@@ -259,9 +259,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 7: Standardise game certainty values\n",
+    "#### Step 7: Convert game certainty data types\n",
     "\n",
-    "Remove text values from game certainty columns, and convert values to numeric ones"
+    "Remove text values from game certainty columns, and cast to numeric types"
    ]
   },
   {
@@ -284,9 +284,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 8: Standardise values for game emotions\n",
+    "#### Step 8: Convert game emotions data types\n",
     "\n",
-    "For every emotion (hopeful, curiosity, enlightment, thrilled, anticipatory, satisfied), replace textual values with numeric ones"
+    "For every emotion (hopeful, curiosity, enlightment, thrilled, anticipatory, satisfied), replace categorical values (enums) with numeric ones (1-4)"
    ]
   },
   {
@@ -327,9 +327,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 9: Standardise TIPI answers\n",
+    "#### Step 9: Convert TIPI answer data types\n",
     "\n",
-    "Remove textual values and convert to numeric values"
+    "Remove textual values and cast to numeric types"
    ]
   },
   {
@@ -420,11 +420,11 @@
    "source": [
     "#### Step 11: Calculate locus values\n",
     "\n",
-    "- Replaces the textual values with numerical ones\n",
+    "- Replaces categorical values (textual answers) with numerical values of 1 (first answer) and 2 (second answer)\n",
     "- Adds a column per question that says if the participant should get a point for that answer or not\n",
     "- Calculates a single column with the aggregated locus score per participant\n",
     "\n",
-    "Note: Questions 1, 8, 14, 19, 24 and 27 are not scored."
+    "Note: Questions 1, 8, 14, 19, 24 and 27 are not scored, see the Locus questionnaire for more information."
    ]
   },
   {
