Use random_state=69 for K-Means

--- a/ellsberg_kmeans_emotion_only.ipynb
+++ b/ellsberg_kmeans_emotion_only.ipynb
@@ -32,9 +32,9 @@
     "# K=4 -> seed=20 -> SU = 0.096\n",
     "# K=3 -> seed=18 -> SU = 0.081\n",
     "\n",
-    "random_state = 18\n",
+    "random_state = 69\n",
     "K_range = range(2, 11)\n",
-    "K = 3"
+    "K = 6"
    ]
   },
   {
@@ -58,13 +58,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "K=3\n",
     "km = KMeans(df[EMOTIONS_FEATURES], K, random_state=random_state)\n",
     "\n",
     "#print('Silhouette:', km.silhouette, '\\n')\n",
     "\n",
-    "#print(100 * (km.centroids[0] - km.centroids[1]) / km.centroids[1])\n",
-    "#print(100 * (km.centroids[0] - km.centroids[2]) / km.centroids[2])\n",
+    "def print_diff(x, y):\n",
+    "    diff = 100 * (km.centroids[x] - km.centroids[y]) / km.centroids[y]\n",
+    "    step = 6\n",
+    "    print(f'Cluster #{x} - Cluster #{y}')\n",
+    "    for i in range(0, len(diff), step):\n",
+    "        print([f'{d:.3f}' for d in diff[i : i + step]])\n",
+    "\n",
+    "print_diff(0, 1)\n",
+    "#print_diff(0, 2)\n",
+    "#print_diff(1, 2)\n",
     "\n",
     "print_per_game_kmeans(km, EMOTIONS_LABELS, plot_graph=True)"
    ]
