Improve statistics output print

--- a/ellsberg_daa_personality_statistics.ipynb
+++ b/ellsberg_daa_personality_statistics.ipynb
@@ -55,11 +55,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def to_summary(not_daa, daa):\n",
+    "def to_table(not_daa, daa):\n",
     "    summary = pd.concat([not_daa, daa], axis=1)\n",
     "    summary = summary.T\n",
     "    summary.index = ['notDAA', 'DAA']\n",
-    "    return summary"
+    "    return summary\n",
+    "\n",
+    "def to_summary(mean, std):\n",
+    "    values = zip(mean.index, mean, std)\n",
+    "    for i, m, s in values:\n",
+    "        print(f'{i}: {m:.3f}({s:.3f})')\n"
    ]
   },
   {
@@ -68,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_mean, all_std"
+    "to_summary(all_mean, all_std)"
    ]
   },
   {
@@ -77,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "to_summary(not_daa_mean, daa_mean)"
+    "to_summary(not_daa_mean, not_daa_std)"
    ]
   },
   {
@@ -86,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "to_summary(not_daa_std, daa_std)"
+    "to_summary(daa_mean, daa_std)"
    ]
   }
  ],
