Fix typos in personality traits

--- a/ellsberg_daa_personality_statistics.ipynb
+++ b/ellsberg_daa_personality_statistics.ipynb
@@ -21,7 +21,7 @@
     "df['Sex'] = np.where(df['Sex'] == 'Male', 0, 1)\n",
     "\n",
     "csv_columns = ['ID', 'participant_id']\n",
-    "table_columns = ['Sex','Openess','Conciensiousness','Extroversion','Agreability','Stability','Locus']\n",
+    "table_columns = ['Sex','Openness','Conscientiousness','Extroversion','Agreeability','Stability','Locus']\n",
     "daa_columns = ['DAA']\n",
     "df = df[csv_columns + table_columns + daa_columns]\n",
     "\n",
