--- a/ellsberg_decision_tree.ipynb
+++ b/ellsberg_decision_tree.ipynb
@@ -33,7 +33,7 @@
     "for x in ['1A', '1B', '2A', '2B']:\n",
     "    emotions_cols += [f'{emotion}{x}' for emotion in emotions]\n",
     "    \n",
-    "big5_cols = ['Openess', 'Conciensiousness', 'Extroversion', 'Agreability', 'Stability']\n",
+    "big5_cols = ['Openness', 'Conscientiousness', 'Extroversion', 'Agreeability', 'Stability']\n",
     "\n",
     "csv_cols = ['ID', 'participant_id']\n",
     "feature_cols = emotions_cols + big5_cols + ['Locus']\n",
