--- a/ellsberg_prepare_data.ipynb
+++ b/ellsberg_prepare_data.ipynb
@@ -388,26 +388,26 @@
     "}\n",
     "\n",
     "# Calculate Big5\n",
-    "big5 = ['Openess', 'Conciensiousness', 'Extroversion', 'Agreability', 'Stability']\n",
+    "big5 = ['Openness', 'Conscientiousness', 'Extroversion', 'Agreeability', 'Stability']\n",
     "\n",
     "def tipi_score(major, minor):\n",
     "    major_col = tipi_mapping[major]\n",
     "    minor_col = tipi_mapping[minor]\n",
     "    return (df[major_col] + (8 - df[minor_col])) / 2\n",
     "\n",
-    "df['Openess'] = tipi_score('Tipi9', 'Tipi10')\n",
-    "df['Conciensiousness'] = tipi_score('Tipi5', 'Tipi6')\n",
+    "df['Openness'] = tipi_score('Tipi9', 'Tipi10')\n",
+    "df['Conscientiousness'] = tipi_score('Tipi5', 'Tipi6')\n",
     "df['Extroversion'] = tipi_score('Tipi1', 'Tipi2')\n",
-    "df['Agreability'] = tipi_score('Tipi3', 'Tipi4')\n",
+    "df['Agreeability'] = tipi_score('Tipi3', 'Tipi4')\n",
     "df['Stability'] = tipi_score('Tipi7', 'Tipi8')\n",
     "\n",
     "print(df[big5].mean())\n",
     "\n",
     "# Averages from Journal:\n",
-    "# Conciensiousness = 4.61\n",
-    "# Agreability = 4.69\n",
+    "# Conscientiousness = 4.61\n",
+    "# Agreeability = 4.69\n",
     "# Stability = 4.34\n",
-    "# Openess = 5.51\n",
+    "# Openness = 5.51\n",
     "# Extroversion = 3.98\n",
     "\n",
     "# Remove raw columns\n",
